--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,6 @@ $blue: #2b6de6;
 body {
   background: #4dcdf7;
   padding: 5%;
-  overflow-x: hidden;
 }
 a { color: inherit; }
 a:hover { color: #2c52af; }
